server/deployment/dev/dev-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: development
  name: dev-deployment
spec:
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
        - name: dev
          image: gcr.io/group-video-chat/dev-group-video-chat
          resources:
            limits:
              memory: "2000Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: dev-service
spec:
  type: ClusterIP
  selector:
    app: dev
  ports:
    - port: 3000
      name: dev
      protocol: TCP
      targetPort: 8080
